--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "express": "^4.15.2",
     "method-override": "^2.3.8",
     "serve-static": "^1.12.2"
+  },
+  "dependencies": {
+    "config": "^1.26.1"
   }
 }
